--- a/src/Home.css
+++ b/src/Home.css
@@ -5,6 +5,8 @@
   max-width: 1200px;
   margin: 0 auto;
   text-align: center;
+  width:100vw;
+  height:100vh;
 }
 
 .books-grid {
@@ -18,4 +20,19 @@
 h1 {
   font-size: 2.5em;
   color: #333;
+}
+
+.add-book-button {
+  display: inline-block;
+  margin-bottom: 20px;
+  padding: 10px 15px;
+  background-color: #007bff;
+  color: white;
+  text-decoration: none;
+  border-radius: 5px;
+  font-size: 16px;
+}
+
+.add-book-button:hover {
+  background-color: #0056b3;
 }
